Added postcss and autoprefixer to webpack and gulp, and removed cross-browser mixins

--- a/packages/ui-library/src/css/charting/_chip-panel.scss
+++ b/packages/ui-library/src/css/charting/_chip-panel.scss
@@ -1,6 +1,6 @@
 .chip-panel {
     &__chip {
-        @include border-radius(2px);
+        border-radius: 2px;
 
         align-items: center;
         color: $color-white;
