--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -42,6 +42,8 @@ $layout-header-height: 64px;    // used in miltiple includes
 $layout-nav-width: 190px;       // used in miltiple include
 $line-height-default: 1.3em;
 
+$inactive-opacity: 0.5;
+
 // Z-INDEXES -----------------------------------------------------------------------------------------------------------
 $zindex__modal:          80;
 $zindex__nav--primary:   70;
