--- a/packages/ui-library/src/css/help.scss
+++ b/packages/ui-library/src/css/help.scss
@@ -49,13 +49,13 @@
         @include bg-styles($color-midnight);
 
         &.show {
-            @include opacity(1);
+            opacity: 1;
         }
         &.tooltip-text-link {
             &:hover {
                 visibility: visible;
 
-                @include opacity(1);
+                opacity: 1;
             }
             a {
                 text-decoration: none;
@@ -137,7 +137,7 @@
             color: $color-accent-neutral-10;
 
             @include bg-styles($color-white);
-            @include box-shadow(0 3px 4px 0 rgba($color-black, 0.1));
+            box-shadow: 0 3px 4px 0 rgba($color-black, 0.1);
         }
     }
 
