--- a/packages/ui-library/src/css/layout/_edit-section.scss
+++ b/packages/ui-library/src/css/layout/_edit-section.scss
@@ -1,5 +1,5 @@
 .edit-section {
-    @include border-radius(3px);
+    border-radius: 3px;
 
     border: 1px solid $color-rabbit-fur;
     margin: 0 (-1 * $spacing-md);
