--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -93,7 +93,7 @@
 
     &__bottom-chart {
         .recharts-surface {
-            @include transform(scaleY(-1));
+            transform: scaleY(-1);
         }
     }
 
