--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -5,8 +5,8 @@
     left: $layout-nav-width;
     right: 0;
     color: $color-white;
-    @include flexbox-direction(column);
-    @include flexbox();
+    flex-direction: column;
+    display: flex;
     align-items: flex-start;
     padding: 0;
     height: 100%; // to keep the larger container from ever blocking clicks
@@ -50,7 +50,7 @@
         }
     }
     .message {
-        @include flexbox();
+        display: flex;
         pointer-events: auto;
         align-items: center;
         clear: both;
@@ -64,7 +64,7 @@
         width: 100%;
         box-sizing: border-box;
 
-        @include animation(fade-in 0.7s);
+        animation: fade-in 0.7s;
 
         &--corner {
             max-width: 400px;
@@ -100,7 +100,7 @@
             margin: auto;
             padding: $spacing-lg;
             background: $color-accent-neutral-10;
-            @include border-radius(4px);
+            border-radius: 4px;
             display: flex;
             flex-direction: column;
             transform: translate(-$layout-nav-width/2, -$layout-header-height);
@@ -178,11 +178,11 @@
         }
 
         &__text {
-            @include flexbox-grow(1);
+            flex-grow: 1;
         }
 
         &__icon {
-            @include flexbox-shrink(0);
+            flex-shrink: 0;
 
             margin-right: $spacing-sm;
             background: $color-white;
@@ -196,8 +196,8 @@
         }
 
         &__progress {
-            @include flexbox();
-            @include flexbox-direction(row);
+            display: flex;
+            flex-direction: row;
 
             align-items: center;
 
@@ -215,7 +215,7 @@
             }
 
             &-border {
-                @include border-radius(2px);
+                border-radius: 2px;
 
                 border: 1px solid $color-white;
                 height: 19px;
@@ -249,7 +249,7 @@
             margin-top: 0;
             border-bottom: 1px solid rgba($color-black, 0.1);
 
-            @include transition(margin-top 0.1s);
+            transition: margin-top 0.1s;
         }
     }
 
@@ -271,7 +271,7 @@
     margin: 15px 0 30px;
     border: 1px solid $color-rabbit-fur;
 
-    @include border-radius(3px);
+    border-radius: 3px;
 
     // TODO: determine primary button styling in non-alternate inline message
     button,
