--- a/packages/ui-library/src/css/password-meter.scss
+++ b/packages/ui-library/src/css/password-meter.scss
@@ -19,7 +19,7 @@
         height: $spacing-xs;
         background-color: $color-neutral-80;
 
-        @include transition(0.2s background-color);
+        transition: 0.2s background-color;
     }
 
     &--s1 {
