--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -38,7 +38,7 @@ button,
     border: 1px solid $color-rhino;
     box-sizing: border-box;
 
-    @include border-radius(2px);
+    border-radius: 2px;
     @include base-button-styles;
     @include default-button-styles;
 
@@ -115,7 +115,7 @@ button,
         line-height: $height;
         font-size: $font-size-normal;
 
-        @include border-radius(ceil($height/2));
+        border-radius: ceil($height/2);
 
         .badge {
             color: inherit;
@@ -129,14 +129,14 @@ button,
             line-height: 19px;
             text-align: center;
 
-            @include border-radius(10px);
+            border-radius: 10px;
         }
     }
     &.disabled,
     &[disabled] {
         cursor: default;
 
-        @include opacity(0.4);
+        opacity: $inactive-opacity;
 
         &:hover {
             color: $color-slate;
@@ -238,7 +238,7 @@ button,
             text-align: center;
             line-height: $size;
 
-            @include border-radius(ceil($size/2));
+            border-radius: ceil($size/2);
 
             &:before {
                 position: absolute;
@@ -377,7 +377,7 @@ button,
     $height: 35px;
     $transition: left 0.4s ease-out;
 
-    @include flexbox;
+    display: flex;
     align-content: center;
     justify-content: center;
 
@@ -385,7 +385,7 @@ button,
     line-height: 10px;
     margin-bottom: $spacing-lg;
 
-    @include border-radius(3px);
+    border-radius: 3px;
     @include base-button-styles;
 
     button,
@@ -409,27 +409,27 @@ button,
 
     button {
         &:first-of-type {
-            @include border-radius(3px 0 0 3px);
+            border-radius: 3px 0 0 3px;
         }
         &:last-of-type {
-            @include border-radius(0 3px 3px 0);
+            border-radius: 0 3px 3px 0;
             border-width: 1px;
         }
     }
 
     .help-tooltip > .helphint-button-target > button {
         &:first-of-type {
-            @include border-radius(3px 0 0 3px);
+            border-radius: 3px 0 0 3px;
         }
 
         &:last-of-type {
-            @include border-radius(0 3px 3px 0);
+            border-radius: 0 3px 3px 0;
             border-width: 1px;
         }
     }
 
     &.disabled {
-        @include opacity(0.4);
+        opacity: $inactive-opacity;
         cursor: default;
         button {
             pointer-events: none;
@@ -441,7 +441,7 @@ button,
     &.sel-3 button:nth-of-type(4),
     &.sel-4 button:nth-of-type(5),
     &.sel-4 button:nth-of-type(6) {
-        @include transition($transition);
+        transition: $transition;
         background: $color-timberwolf;
     }
 }
@@ -500,8 +500,8 @@ button.tile-button {
     height: auto;
     white-space: normal;
 
-    @include flexbox;
-    @include flexbox-direction(column);
+    display: flex;
+    flex-direction: column;
 
     align-items: center;
     justify-content: space-between;
@@ -524,7 +524,7 @@ button.tile-button {
         }
     }
     &.tile-button--selected {
-        @include box-shadow(0 2px 5px 0 rgba($color-black, 0.2));
+        box-shadow: 0 2px 5px 0 rgba($color-black, 0.2);
 
         & .tile-button__title {
             @include font-pn-semibold;
@@ -584,7 +584,7 @@ button.tile-button {
     }
 
     &__content {
-        @include flexbox-grow(1);
+        flex-grow: 1;
         @include break-word;
 
         line-height: 1.3em;
@@ -622,11 +622,11 @@ button.tile-button {
 }
 
 .tile-selector {
-    @include flexbox;
+    display: flex;
 
     > * {
-        @include flexbox-grow(1);
-        @include flexbox-shrink(1);
+        flex-grow: 1;
+        flex-shrink: 1;
         margin-right: $spacing-md;
         flex-basis: 0;
 
@@ -658,23 +658,23 @@ button.tile-button {
         }
 
         &--grow-1 {
-            @include flexbox-grow(1);
+            flex-grow: 1;
         }
 
         &--grow-2 {
-            @include flexbox-grow(2);
+            flex-grow: 2;
         }
 
         &--grow-3 {
-            @include flexbox-grow(3);
+            flex-grow: 3;
         }
 
         &--grow-4 {
-            @include flexbox-grow(4);
+            flex-grow: 4;
         }
 
         &--square {
-            @include flexbox-grow(0);
+            flex-grow: 0;
             flex-basis: auto;
         }
 
@@ -690,8 +690,8 @@ button.tile-button {
         width: 100%;
 
         > * {
-            @include flexbox-grow(1);
-            @include flexbox-shrink(1);
+            flex-grow: 1;
+            flex-shrink: 1;
 
             margin-right: $spacing-md;
             flex-basis: 0%;
@@ -724,7 +724,7 @@ button.tile-button {
 
 .tile-button--side-icon,
 button.tile-button--side-icon {
-    @include flexbox-direction(row);
+    flex-direction: row;
 
     box-sizing: border-box;
 
@@ -749,13 +749,13 @@ button.tile-button--side-icon {
         }
 
         &__content-container {
-            @include flexbox-grow(1);
+            flex-grow: 1;
 
             text-align: left;
         }
 
         &__title {
-            @include flexbox();
+            display: flex;
 
             margin-top: 0;
             text-align: left;
@@ -764,8 +764,8 @@ button.tile-button--side-icon {
         &__note {
             @include text-body;
 
-            @include flexbox-grow(1);
-            @include flexbox-shrink(0);
+            flex-grow: 1;
+            flex-shrink: 0;
 
             text-transform: none;
             text-align: right;
@@ -779,7 +779,7 @@ button.tile-button--side-icon {
 }
 
 .tile-panel {
-    @include box-shadow(0 3px 4px 0 rgba($color-black, 0.1));
+    box-shadow: 0 3px 4px 0 rgba($color-black, 0.1);
 
     background-color: $color-active-blue;
     box-sizing: border-box;
