--- a/packages/ui-library/src/css/charting/_multiseries-chart.scss
+++ b/packages/ui-library/src/css/charting/_multiseries-chart.scss
@@ -40,9 +40,9 @@
     }
 
     &__tooltip {
-        @include border-radius(2px);
-        @include box-shadow(0 3px 4px 0 rgba($color-black, 0.1));
-        @include box-sizing(border-box);
+        border-radius: 2px;
+        box-shadow: 0 3px 4px 0 rgba($color-black, 0.1);
+        box-sizing: border-box;
 
         background-color: $color-white;
         border: 1px solid $color-neutral-80;
