--- a/packages/ui-library/src/css/colorpicker.scss
+++ b/packages/ui-library/src/css/colorpicker.scss
@@ -23,7 +23,7 @@
             pointer-events: none;
             text-transform: none;
 
-            @include transition(all 0.3s);
+            transition: all 0.3s;
         }
     }
     &.open {
@@ -32,7 +32,7 @@
                 display: block;
             }
             &:after {
-                @include rotate(180deg);
+                transform: rotate( 180deg);
             }
         }
     }
@@ -64,7 +64,7 @@
             right: 0;
             overflow: hidden;
 
-            @include border-radius(3px);
+            border-radius: 3px;
 
             &:before {
                 content: '';
@@ -76,8 +76,8 @@
                 box-sizing: border-box;
                 border: 1px solid rgba($color-black, 0.1);
 
-                @include background-clip(content-box);
-                @include border-radius(3px);
+                background-clip: content-box;
+                border-radius: 3px;
             }
         }
     }
@@ -103,9 +103,9 @@
 
 
 
-        @include box-shadow($box-shadow);
-        @include border-radius($border-radius);
-        @include transition(0.3s ease);
+        box-shadow: $box-shadow;
+        border-radius: $border-radius;
+        transition: 0.3s ease;
 
         &:before {
             content: '▲';
@@ -121,11 +121,11 @@
             line-height: 1em;
             color: $color-white;
 
-            @include transform(scale(1.9,1));
+            transform: scale(1.9,1);
         }
     }
 }
 
 .chrome-picker {
-    @include box-shadow(none !important);
+    box-shadow: none !important;
 }
