--- a/packages/ui-library/src/css/details-page.scss
+++ b/packages/ui-library/src/css/details-page.scss
@@ -24,7 +24,7 @@
             vertical-align: top;
             margin: 30px 0 0 20px;
 
-            @include transform(translateY(-50%));
+            transform: translateY(-50%);
         }
 
         &.status-open {
@@ -105,7 +105,7 @@
     .resend-btn {
         padding: 0 15px;
 
-        @include border-radius(2px);
+        border-radius: 2px;
     }
     .reject-btn,
     .approve-btn,
@@ -144,7 +144,7 @@
     .approve-btn,
     .resend-btn {
         &:hover {
-            @include opacity(0.7);
+            opacity: 0.7;
         }
     }
     .reject-btn {
