--- a/packages/ui-library/src/css/details-tooltip/_popover.scss
+++ b/packages/ui-library/src/css/details-tooltip/_popover.scss
@@ -14,7 +14,7 @@ $arrow-height: 10px;
 $popup-min-width: 2 * $arrow-offset + 2 * $arrow-height + 65px;
 
 .popup-frame {
-    @include box-shadow($popup-box-shadow);
+    box-shadow: $popup-box-shadow;
 
     display: inline-block;
     position: relative;
