--- a/packages/ui-library/src/css/end-user/_user-nav.scss
+++ b/packages/ui-library/src/css/end-user/_user-nav.scss
@@ -1,6 +1,6 @@
 .user-nav {
     @include font-pn-regular;
-    @include flexbox();
+    display: flex;
     align-items: flex-end;
 
     &__collapsible-trigger {
@@ -35,8 +35,8 @@
     }
 
     &__collapsible-menu {
-        @include flexbox();
-        @include flexbox-grow(1);
+        display: flex;
+        flex-grow: 1;
         align-items: flex-end;
     }
     &__dropdown-menu {
@@ -81,7 +81,7 @@
 
 .user-info {
     $image-size: 30px;
-    @include flexbox();
+    display: flex;
     align-items: center;
     color: $color-midnight;
     text-decoration: none;
