--- a/packages/ui-library/src/css/html-elements.scss
+++ b/packages/ui-library/src/css/html-elements.scss
@@ -21,7 +21,7 @@ a {
     }
 
     &.disabled {
-        opacity: 0.4;
+        opacity: $inactive-opacity;
 
         &:hover {
             text-decoration: none;
