--- a/packages/ui-library/src/css/layout/_chip.scss
+++ b/packages/ui-library/src/css/layout/_chip.scss
@@ -14,7 +14,7 @@
         color: $color-white;
         background-color: $color-elephant;
 
-        @include border-radius(3px);
+        border-radius: 3px;
     }
 
     &--color-cyan {
