--- a/packages/ui-library/src/css/layout/_policy-node.scss
+++ b/packages/ui-library/src/css/layout/_policy-node.scss
@@ -50,7 +50,7 @@
     &__icon,
     &__number,
     &__character {
-        @include border-radius(20px);
+        border-radius: 20px;
 
         background: $color-blue-grey;
         color: $color-white;
