--- a/packages/ui-library/src/css/layout/_stretch-content.scss
+++ b/packages/ui-library/src/css/layout/_stretch-content.scss
@@ -1,12 +1,12 @@
 .stretch-content {
-    @include flexbox;
-    @include flexbox-direction(column);
-    @include flexbox-grow(1);
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 
     position: relative;
 
     > * {
-        @include flexbox-shrink(0);
+        flex-shrink: 0;
     }
 
     &--scrollable {
