--- a/packages/ui-library/src/css/layout/_view-toggle.scss
+++ b/packages/ui-library/src/css/layout/_view-toggle.scss
@@ -1,6 +1,6 @@
 .view-toggle {
-    @include border-radius(10px);
-    @include transition(background 0.1s);
+    border-radius: 10px;
+    transition: background 0.1s;
 
     background: $color-neutral-80;
     border: none;
@@ -41,8 +41,8 @@
     }
 
     &:before {
-        @include border-radius(10px);
-        @include transition(0.1s left);
+        border-radius: 10px;
+        transition: 0.1s left;
 
         background: $color-white;
         content: '';
@@ -67,7 +67,7 @@
     }
 
     path {
-        @include transition(fill 0.1s);
+        transition: fill 0.1s;
 
         fill: $color-neutral-30;
     }
