--- a/packages/ui-library/src/css/message-button.scss
+++ b/packages/ui-library/src/css/message-button.scss
@@ -1,6 +1,6 @@
 
 button.message-button {
-    @include inline-flex;
+    display: inline-flex;
     align-items: center;
     line-height: 1em;
     transition: all 0.1s ease-out;
