--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -1,69 +1,7 @@
-
-// CROSS-BROWSER COMPATIBILITY --------------------------------------------------------------------
-
-@mixin border-radius($radius) {
-    -webkit-border-radius: $radius;
-    -moz-border-radius: $radius;
-    -ms-border-radius: $radius;
-    border-radius: $radius;
-}
-
-@mixin box-shadow($shadow) {
-    -webkit-box-shadow: $shadow;
-    -moz-box-shadow: $shadow;
-    box-shadow: $shadow;
-}
-
-@mixin gradient-vertical($color-top, $color-bot, $top-percent:0%, $bot-percent:100%) {
-    /* stylelint-disable */
-    background: $color-top; // Old browsers
-    background: -moz-linear-gradient(top, $color-top $top-percent, $color-bot $bot-percent); // FF3.6+
-    background: -webkit-gradient(linear, left top, left bottom, color-stop($bot-percent,$color-top), color-stop($bot-percent,$color-bot)); // Chrome,Safari4+
-    background: -webkit-linear-gradient(top, $color-top $top-percent,$color-bot $bot-percent); // Chrome10+,Safari5.1+
-    background: -o-linear-gradient(top, $color-top $top-percent,$color-bot $bot-percent); // Opera 11.10+
-    background: -ms-linear-gradient(top, $color-top $top-percent,$color-bot $bot-percent); // IE10+
-    background: linear-gradient(to bottom, $color-top $top-percent,$color-bot $bot-percent); // W3C
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$color-top}', endColorstr='#{$color-bot}',GradientType=0 ); // IE6-9
-    /* stylelint-enable */
-}
-
-@mixin opacity($opacity) {
-    $msopac: $opacity * 100;
-    filter: alpha(opacity=$msopac);
-    -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=#{$msopac})';
-    opacity: $opacity;
-}
-
-@mixin blur($blur) {
-    -webkit-filter: blur($blur);
-    -moz-filter: blur($blur);
-    -o-filter: blur($blur);
-    -ms-filter: blur($blur);
-    filter: blur($blur);
-}
-
-@mixin flexbox {
-	/* stylelint-disable */
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: flex;
-	/* stylelint-enable */
-}
-
-@mixin flexbox-grow($value) {
-    -webkit-box-flex: $value;
-    -webkit-flex-grow: $value;
-    -moz-flex-grow: $value;
-    -ms-flex-positive: $value;
-    flex-grow: $value;
-}
-
 // STYLING ----------------------------------------------------------------------------------------
 
 @mixin inactive-link-styles {
-    @include transition(transform 0.2s ease-out);
+    transition: transform 0.2s ease-out;
     content: '';
     position: absolute;
     bottom: 0;
@@ -76,7 +14,7 @@
 }
 
 @mixin active-link-styles {
-    @include transition(transform 0.1s ease-out);
+    transition: transform 0.1s ease-out;
     transform: scaleX(1);
     visibility: visible;
 }
@@ -103,7 +41,7 @@
 
     &::placeholder {
         font-style: italic;
-        opacity: 0.4;
+        opacity: $inactive-opacity;
     }
 }
 
@@ -146,15 +84,7 @@
 @mixin text-truncate {
     overflow: hidden;
     text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
     white-space: nowrap;
-}
-
-@mixin text-size-adjust($tsa) {
-    -moz-text-size-adjust: $tsa;
-    -webkit-text-size-adjust: $tsa;
-    -ms-text-size-adjust: $tsa;
 }
 
 @mixin placeholder-css(
@@ -163,25 +93,7 @@
     $padding-top,
     $font-style: italic
 ) {
-    ::-webkit-input-placeholder {
-        color: $color;
-        font-weight: $font-weight;
-        padding: $padding-top 3px 0 0;
-        font-style: $font-style;
-    }
-    :-moz-placeholder { // Firefox 18-
-        color: $color;
-        font-weight: $font-weight;
-        padding: $padding-top 3px 0 0;
-        font-style: $font-style;
-    }
-    ::-moz-placeholder {  // Firefox 19+
-        color: $color;
-        font-weight: $font-weight;
-        padding: $padding-top 3px 0 0;
-        font-style: $font-style;
-    }
-    :-ms-input-placeholder {
+    ::placeholder {
         color: $color;
         font-weight: $font-weight;
         padding: $padding-top 3px 0 0;
@@ -197,57 +109,6 @@
 
 
 // ANIMATION --------------------------------------------------------------------------------------
-
-@mixin transition($transition) {
-    -webkit-transition: $transition;
-    -moz-transition: $transition;
-    -ms-transition: $transition;
-    -o-transition: $transition;
-    transition: $transition;
-}
-
-@mixin transition-delay($transition-delay) {
-    -webkit-transition-delay: $transition-delay;
-    -moz-transition-delay: $transition-delay;
-    -ms-transition: $transition-delay;
-    -o-transition: $transition-delay;
-    transition-delay: $transition-delay;
-}
-
-@mixin transition-duration($transition-duration) {
-    -webkit-transition-duration: $transition-duration;
-    -moz-transition-duration: $transition-duration;
-    transition-duration: $transition-duration;
-}
-
-@mixin transform($transform) {
-    -ms-transform: $transform;
-    -webkit-transform: $transform;
-    transform: $transform;
-}
-
-@mixin animation ($animation) {
-    -webkit-animation: $animation;
-    -moz-animation: $animation;
-    -o-animation: $animation;
-    animation: $animation;
-}
-
-@mixin rotate($degrees) {
-    -webkit-transform: rotate($degrees);
-    -moz-transform: rotate($degrees);
-    -ms-transform: rotate($degrees);
-    -o-transform: rotate($degrees);
-    transform: rotate($degrees);
-}
-
-@mixin flipV {
-    -webkit-transform: scaleY(-1);
-    -moz-transform: scaleY(-1);
-    -ms-transform: scaleY(-1);
-    -o-transform: scaleY(-1);
-    transform: scaleY(-1);
-}
 
 @mixin keyframes($animation-name) {
     @-webkit-keyframes #{$animation-name} {
@@ -324,47 +185,6 @@
 }
 
 
-// FLEXBOX ----------------------------------------------------------------------------------------
-
-@mixin flexbox {
-    /* stylelint-disable declaration-block-no-duplicate-properties */
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: flex;
-    /* stylelint-enable declaration-block-no-duplicate-properties */
-}
-
-@mixin flexbox-grow($value) {
-    -webkit-box-flex: $value;
-    -webkit-flex-grow: $value;
-    -moz-flex-grow: $value;
-    -ms-flex-positive: $value;
-    flex-grow: $value;
-}
-
-@mixin flexbox-shrink($value) {
-    -webkit-flex-shrink: $value;
-    -moz-flex-shrink: $value;
-    -ms-flex-shrink: $value;
-    flex-shrink: $value;
-}
-
-@mixin inline-flex {
-    /* stylelint-disable declaration-block-no-duplicate-properties */
-    display: -webkit-inline-flex;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    /* stylelint-enable declaration-block-no-duplicate-properties */
-}
-
-@mixin flexbox-direction($value) {
-    flex-direction: $value;
-    -ms-flex-direction: $value;
-}
-
-
 // COLOR ------------------------------------------------------------------------------------------
 
 @function tint($color, $percentage) {
@@ -381,55 +201,17 @@
 @mixin vertical-align {
     position: relative;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-}
-
-@mixin box-sizing($box-sizing) {
-    -webkit-box-sizing: $box-sizing;
-    -moz-box-sizing: $box-sizing;
-    box-sizing: $box-sizing;
-}
-
-@mixin background-clip($background-clip) {
-    -webkit-background-clip: $background-clip;
-    -moz-background-clip: $background-clip;
-    background-clip: $background-clip;
-}
-
-@mixin background-size($bgsize) {
-    -webkit-background-size: $bgsize;
-    -moz-background-size: $bgsize;
-    -o-background-size: $bgsize;
-    background-size: $bgsize;
 }
 
 @mixin grab-cursor {
 	/* stylelint-disable */
     cursor: move; /* fallback if grab cursor is unsupported */
     cursor: grab;
-    cursor: -moz-grab;
-    cursor: -webkit-grab;
     &:active {
         cursor: grabbing;
-        cursor: -moz-grabbing;
-        cursor: -webkit-grabbing;
     }
 	/* stylelint-enable */
-}
-
-@mixin appearance($appearance) {
-    appearance: $appearance;
-    -moz-appearance: $appearance;
-    -webkit-appearance: $appearance;
-    -o-appearance: $appearance;
-}
-
-@mixin clip($clip-property) {
-    -moz-background-clip: $clip-property;
-    -webkit-background-clip: $clip-property;
-    background-clip: $clip-property;
 }
 
 @mixin button-spacing($spacing: 10px) {
@@ -450,11 +232,6 @@
             margin-left: $spacing;
         }
     }
-}
-
-@mixin backface-visibility {
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
 }
 
 @mixin arrow($arrow-size) {
@@ -522,27 +299,6 @@
 }
 
 // DEPRECATED OR SITE-SPECIFIC --------------------------------------------------------------------
-
-@mixin chrome-fixed-positioning-bug-hack {
-    -webkit-backface-visibility: hidden;
-    -webkit-transform: translateZ(0);
-}
-
-@mixin transition-3($opacity, $visibility, $transform) {
-    -webkit-transition: $opacity, $visibility, $transform;
-    -moz-transition: $opacity, $visibility, $transform;
-    -ms-transition: $opacity, $visibility, $transform;
-    -o-transition: $opacity, $visibility, $transform;
-    transition: $opacity, $visibility, $transform;
-}
-
-@mixin user-select($select) {
-    -o-user-select: $select;
-    -moz-user-select: $select;
-    -webkit-user-select: $select;
-    -ms-user-select: $select;
-    user-select: $select;
-}
 
 @mixin keyframe ($animation-name) {
     @include keyframes($animation-name) {
