--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -40,7 +40,7 @@
             border: 1px solid $color-input-border;
         }
 
-        @include box-sizing(border-box);
+        box-sizing: border-box;
 
         .entry {
             position: relative;
@@ -52,8 +52,8 @@
             vertical-align: top;
             padding: $spacing-xs 30px $spacing-xs $spacing-sm;
             text-overflow: ellipsis;
-            @include box-sizing(border-box);
-            @include border-radius(2px);
+            box-sizing: border-box;
+            border-radius: 2px;
 
             label {
                 max-width: 100%;
@@ -69,7 +69,7 @@
                 position: absolute;
                 left: 0;
                 top: 0;
-                @include transform(translate(-45%, -55%));
+                transform: translate(-45%, -55%);
 
                 &-icon {
                     border: 1px solid $color-neutral-80;
@@ -111,7 +111,7 @@
             }
 
             &--active {
-                @include box-shadow(0 1px 2px rgba($color-black, 0.1));
+                box-shadow: 0 1px 2px rgba($color-black, 0.1);
 
                 border-color: $color-active-blue;
 
