--- a/packages/ui-library/src/css/tables.scss
+++ b/packages/ui-library/src/css/tables.scss
@@ -208,7 +208,7 @@ table {
                 td {
                     padding: 15px;
 
-                    @include animation(fade-in 0.1s);
+                    animation: fade-in 0.1s;
                 }
             }
         }
