--- a/packages/ui-library/src/css/tabs.scss
+++ b/packages/ui-library/src/css/tabs.scss
@@ -85,7 +85,7 @@
                 cursor: default;
                 margin-bottom: 1px;
 
-                @include transition(all 0.4s ease-in);
+                transition: all 0.4s ease-in;
             }
         }
     }
