--- a/packages/ui-library/src/css/text-styles.scss
+++ b/packages/ui-library/src/css/text-styles.scss
@@ -83,7 +83,7 @@ $body-text-color: $color-neutral-20;
 @mixin text-placeholder {
     @include text-value;
 
-    opacity: 0.4;
+    opacity: $inactive-opacity;
     font-style: italic;
 }
 
