--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -32,7 +32,7 @@
         opacity: 1;
         color: $color-white;
 
-        @include border-radius(5px);
+        border-radius: 5px;
 
         .title {
             font-size: 36px;
@@ -71,7 +71,7 @@
             background-color: $color-active-blue;
             font-weight: 100;
 
-            @include border-radius(2px);
+            border-radius: 2px;
 
             &.prev,
             &.dismiss {
